# es_bg

./: Dockerfile.backend  Dockerfile.frontend  README.md  build.sh  docker-compose.yml  nginx.conf  pyproject.toml  run.sh
src/: rxconfig.py
src/espanol/: es_bg.csv  espanol.py  models.py  translation_data.py
src/tests/: test_models.py
